# powermax

./: .dockerignore  .env  .gitignore  Dockerfile  note2  notes  pyproject.toml
worker/: celery_app.py  db.py  main.py  tasks.py
